--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,9 @@
 ---
+import Kort from "./Kort.astro";
 import "./styles/style.css";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	
-	</body>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -23,5 +13,7 @@ import "./styles/style.css";
   </head>
   <body>
     <h1>Astro</h1>
+
+    <Kort />
   </body>
 </html>
