--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import "./styles/style.css";
+import Header from "./Header.astro";
 ---
 
 <html lang="en">
@@ -11,6 +12,7 @@ import "./styles/style.css";
     <title>Astro</title>
   </head>
   <body>
-    <h1>Astro</h1>
+    <!-- <h1>Astro</h1> -->
+    <Header />
   </body>
 </html>
