Hero skal stadig pudses lidt

--- a/src/pages/Hero.astro
+++ b/src/pages/Hero.astro
@@ -1,25 +1,14 @@
----
-
----
-
 <section class="hero">
-  <!-- IMAGE TOP – MOBILE FIRST -->
   <img class="hero_img hero_img--top" src="/public/herobillede1.svg" alt="People working" />
 
-  <!-- CENTER TEXTBOX -->
   <div class="hero_box">
     <h1>VIL DU SKABE PAUSER DER BETALER SIG?</h1>
   </div>
 
-  <!-- IMAGE BOTTOM – MOBILE FIRST -->
   <img class="hero_img hero_img--bottom" src="/public/herobillede2.svg" alt="Woman relaxing" />
 </section>
 
 <style>
-  /* -------------------- */
-  /*   MOBILE FIRST       */
-  /* -------------------- */
-
   .hero {
     width: 100%;
     display: flex;
@@ -52,9 +41,7 @@
     margin: 0;
   }
 
-  /* -------------------- */
-  /*   DESKTOP VERSION    */
-  /* -------------------- */
+  /* Desktop ! */
 
   @media (min-width: 900px) {
     .hero {
