AbonnementHero sat ind

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer>
   <div class="grid_desktop">
-    <img src="public/footer_logo.svg" class="footer_logo" alt="SoundWheel logo" />
+    <img src="/footer_logo.svg" class="footer_logo" alt="SoundWheel logo" />
     <ul>
       <li><a href="">Om SoundWheel</a></li>
       <li><a href="">Book demo</a></li>
@@ -13,8 +13,8 @@
       <p>Download SoundWheel now and get 14 days free trial</p>
 
       <div class="grid_1-1">
-        <a href="https://play.google.com/store/apps/details?id=com.soundwheel.soundwheel"><img src="public/googleplay.svg" alt="Google Play logo" /></a>
-        <a href="https://apps.apple.com/dk/app/soundwheel-genoplad-via-musik/id1617422124?l=da"><img src="public/appstore.svg" alt="App Store logo" /></a>
+        <a href="https://play.google.com/store/apps/details?id=com.soundwheel.soundwheel"><img src="/googleplay.svg" alt="Google Play logo" /></a>
+        <a href="https://apps.apple.com/dk/app/soundwheel-genoplad-via-musik/id1617422124?l=da"><img src="/appstore.svg" alt="App Store logo" /></a>
       </div>
     </div>
   </div>
