--- a/src/pages/subscriptions/[slug].astro
+++ b/src/pages/subscriptions/[slug].astro
@@ -1,4 +1,7 @@
 ---
+import AbonnementHero from "../../components/AbonnementHero.astro";
+import Pagelayout from "../../layouts/Pagelayout.astro";
+
 export async function getStaticPaths() {
   const url = "https://lrmrhubfcdexgbtzwhkl.supabase.co/rest/v1/Subscriptions";
   const key = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxybXJodWJmY2RleGdidHp3aGtsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMwNzcxMTcsImV4cCI6MjA3ODY1MzExN30.BNzYKZUOSXZL6ZaNW1b-yliRwEPQTcsV8Xbe0_D55AE";
@@ -25,6 +28,6 @@ const { subscription } = Astro.props;
 console.log("subscription");
 ---
 
-<h1>{subscription.Name}</h1>
-<p>Pris: {subscription.Price} kr</p>
-<p>Op til {subscription.Employee} medarbejdere</p>
+<Pagelayout>
+  <AbonnementHero name={subscription.Name} employee={subscription.Employee} price={subscription.Price} />
+</Pagelayout>
