--- a/src/components/AbonnementSektion.astro
+++ b/src/components/AbonnementSektion.astro
@@ -5,6 +5,7 @@ const { data } = Astro.props;
 ---
 
 <section class="abonnement_sektion">
+  <img src="/work_applogo.svg" alt="" class="app_logo" />
   <h2 class="abonnement_overskrift">Abonnementer</h2>
 
   <div class="abonnement_kort_wrapper">
@@ -31,14 +32,26 @@ const { data } = Astro.props;
   /* Mobil-first! */
 
   .abonnement_sektion {
-    background-color: #d8cec3;
+    position: relative;
     padding: 3rem 1.2rem 4rem;
+    background-color: #e0dcd3;
+    margin-bottom: 15rem;
     text-align: center;
     color: #4b1c1c;
   }
 
+  .app_logo {
+    justify-self: center; /* højre kant */
+    align-self: start; /* top */
+    margin-top: -120px;
+    margin-bottom: 3rem;
+    width: 150px;
+    height: auto;
+    z-index: 10;
+  }
+
   .abonnement_overskrift {
-    font-size: 2rem;
+    font-size: clamp(1.8rem, 6vw, 4.375rem);
     font-weight: 700;
     margin-bottom: 2rem;
     color: #4b1c1c;
@@ -48,7 +61,6 @@ const { data } = Astro.props;
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    max-width: 450px;
     margin: 0 auto;
   }
 
@@ -67,30 +79,38 @@ const { data } = Astro.props;
 
   /* Desktop version! */
 
-  @media (min-width: 900px) {
+  @media (min-width: 1300px) {
     .abonnement_sektion {
-      padding: 6rem 2rem 5rem;
+      padding: 2rem 4rem 5rem;
     }
 
     .abonnement_overskrift {
-      font-size: 2.8rem;
-      margin-bottom: 3.2rem;
+      margin-bottom: 8rem;
     }
 
     .abonnement_kort_wrapper {
       flex-direction: row;
       justify-content: center;
-      gap: 2.8rem;
-      max-width: 1200px;
+      gap: 1rem;
     }
 
     .abonnement_kort {
-      max-width: 330px;
     }
 
     .abonnement_note {
       margin-top: 2.5rem;
       font-size: 1.05rem;
+    }
+
+    .app_logo {
+      justify-self: end; /* højre kant */
+      align-self: start; /* top */
+      margin-top: -150px;
+      margin-right: 100px;
+      margin-bottom: 1.5rem;
+      width: 250px;
+      height: auto;
+      z-index: 10;
     }
   }
 </style>
