--- a/src/components/Statestisk.astro
+++ b/src/components/Statestisk.astro
@@ -39,12 +39,6 @@
 </section>
 
 <style>
-  * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-
   body {
     min-height: 100%;
     margin: 0;
@@ -52,20 +46,28 @@
 
   .sw-statistik {
     background-color: #c9bfbd;
-    padding: 6rem 1.5rem;
+    padding-top: 6rem;
+    padding-bottom: 2rem;
+    margin-bottom: 15rem;
+  }
+
+  .sw-statistik img {
+    width: 120%;
   }
 
   .sw-statistik_indhold {
-    max-width: 1100px;
     margin: 0 auto;
     text-align: center;
     color: #3c1515;
   }
 
   .sw-statistik_overskrift {
-    font-size: clamp(1.8rem, 2.6vw, 2.6rem);
+    margin: 0 auto;
+    max-width: 1100px;
+    font-size: clamp(1.8rem, 6vw, 3.8rem);
+    line-height: 1.4;
     font-weight: 700;
-    margin-bottom: 4rem;
+    margin-bottom: 10rem;
   }
 
   .sw-statistik_gitter {
@@ -73,22 +75,23 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 4rem;
     justify-items: center;
+    margin-bottom: 12rem;
   }
 
   .sw-statistik_element {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 4rem;
   }
 
   .sw-statistik_procent {
-    font-size: 2.5rem;
+    font-size: 3rem;
     font-weight: 700;
   }
 
   .sw-statistik_tekst {
-    font-size: 1.3rem;
+    font-size: 1.8rem;
     font-style: bold;
     line-height: 1.35;
     max-width: 14rem;
