--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,3 +10,27 @@ img {
   height: auto;
   display: block;
 }
+
+/*************** Fonte *********************/
+
+.montserrat {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+/*******************************************/
+
+h1,
+h2,
+h3 {
+  font-family: "Montserrat", sans-serif;
+}
+
+.illustrationer img {
+  width: 20%;
+}
+
+.illustrationer {
+  display: flex;
+}
