Sektion rettet lidt til

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,8 +26,8 @@ console.log("supadata: ", supaData);
 <Pagelayout>
   <Hero />
   <Statestisk />
-  <Sektion titel="Hvem er jeg?" billede="/kristian1.webp" brødtekst="Mit navn er Kristian Humaidan, og jeg står bag SoundWheel. Du kender mig måske som Ufo fra Ufo & Yepha, hvor jeg arbejdede med rytme og energi. I dag hjælper jeg virksomheder med ro, fokus og trivsel gennem lyd og vibration. Jeg viser, hvordan lyd kan give medarbejdere en naturlig pause i en travl hverdag. Sammen kan vi skabe balance, energi og nærvær på din arbejdsplads." />
-  <Sektion titel="Vil du opleve effekten på egen krop?" billede="/kristian1.webp" brødtekst="Book en kort, uforpligtende og guidet lyd-demo, og oplev SoundWheel live hos jer.nIngen forberedelse – bare nysgerrighed og lyst til en energigivende pause, der reducerer stress og styrker arbejdsglæde. Lyt, lær og mærk, hvordan ro og fokus vender tilbage – blot på under 10 minutter." />
+  <Sektion titel="Hvem er jeg?" billede="/kristian1.webp" brødtekst1="Mit navn er Kristian Humaidan, og jeg står bag SoundWheel. Du kender mig måske som Ufo fra Ufo & Yepha, hvor jeg arbejdede med rytme og energi." brødtekst2="I dag hjælper jeg virksomheder med ro, fokus og trivsel gennem lyd og vibration. Jeg viser, hvordan lyd kan give medarbejdere en naturlig pause i en travl hverdag." brødtekst3="Sammen kan vi skabe balance, energi og nærvær på din arbejdsplads." />
+  <Sektion variant="sektion2" titel="Vil du opleve effekten på egen krop?" billede="/kristian_live.webp" brødtekst1="Book en kort, uforpligtende og guidet lyd-demo, og oplev SoundWheel live hos jer." brødtekst2="Ingen forberedelse - bare nysgerrighed og lyst til en energigivende pause, der reducerer stress og styrker arbejdsglæde." brødtekst3="Lyt, lær og mærk, hvordan ro og fokus vender tilbage - blot på under 10 minutter." />
   <IllustrationSektion />
   <AbonnementSektion data={supaData} />
 
