--- a/src/components/Sektion.astro
+++ b/src/components/Sektion.astro
@@ -1,8 +1,8 @@
 ---
-const { titel, billede, brødtekst } = Astro.props;
+const { variant, titel, billede, brødtekst1, brødtekst2, brødtekst3 } = Astro.props;
 ---
 
-<section>
+<section class={variant}>
   <div class="flex">
     <div class="heading">
       <h3>{titel}</h3>
@@ -11,13 +11,31 @@ const { titel, billede, brødtekst } = Astro.props;
       <img src={billede} alt="Kristian" />
     </div>
     <div class="text">
-      <p>{brødtekst}</p>
+      <p>{brødtekst1}</p>
+      <p>{brødtekst2}</p>
+      <p>{brødtekst3}</p>
     </div>
   </div>
 </section>
 
 <style>
   /* Mobilvisning: Overskrift > Billede > Tekst */
+  h3 {
+    font-size: 3.5rem;
+    text-align: center;
+  }
+
+  p {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    line-height: 1.5;
+  }
+
+  section {
+    padding: 2rem 2rem;
+    margin-bottom: 15rem;
+  }
+
   .flex {
     display: grid;
     grid-template-columns: 1fr;
@@ -25,7 +43,7 @@ const { titel, billede, brødtekst } = Astro.props;
       "heading"
       "image"
       "text";
-    gap: 10px;
+    gap: 50px;
   }
 
   .heading {
@@ -39,33 +57,57 @@ const { titel, billede, brødtekst } = Astro.props;
   }
 
   /* Desktopvisning: Overskrift + Tekst samlet til venstre, Billede til højre */
-  @media (min-width: 800px) {
+  @media (min-width: 1000px) {
+    h3 {
+      text-align: start;
+    }
+
     .flex {
       grid-template-columns: 1fr 1fr;
       grid-template-areas:
         "heading image"
         "text    image";
       align-items: start;
-      gap: 20px;
+      gap: 50px;
     }
 
     .heading {
       grid-area: heading;
       align-items: center;
+      max-width: 90%;
+      padding-left: 5rem;
     }
     .text {
       grid-area: heading;
-      margin-top: 30px;
       align-items: center;
+      max-width: 80%;
+      margin: 0 auto;
+      padding-top: 100px;
     }
     .image {
       grid-area: image;
     }
 
     .image img {
-      max-width: 100%;
+      max-width: 80%;
+      margin: 0 auto;
       height: auto;
       display: block;
+    }
+
+    /****** Sektion2 ***********/
+
+    .sektion2 .text {
+      padding-top: 200px;
+      grid-area: image;
+    }
+
+    .sektion2 .heading {
+      grid-area: image;
+    }
+
+    .sektion2 .image {
+      grid-area: heading;
     }
   }
 </style>
