--- a/src/layouts/Pagelayout.astro
+++ b/src/layouts/Pagelayout.astro
@@ -13,6 +13,7 @@ import Footer from "../components/Footer.astro";
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <meta name="”robots”" content="”noindex,nofollow”" />
     <title>Astro</title>
   </head>
   <body>
