--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -1,3 +1,4 @@
+<!-- Kilde: YouTube-video: https://www.youtube.com/watch?v=sVZX0XvEBhk -->
 <h2>KUNDER DER HAR SKABT PAUSER</h2>
 <section>
   <div class="marquee">
