--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -18,6 +18,8 @@
   </div>
 </section>
 
+<a class="button" href="#">BOOK DEMO</a>
+
 <style>
   h2 {
     font-size: 2.5rem;
@@ -32,7 +34,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    margin-bottom: 20rem;
+    margin-bottom: 5rem;
   }
 
   .marquee {
@@ -56,8 +58,27 @@
   }
 
   .marquee_content img {
-    height: 50px;
+    height: 60px;
     width: auto;
+  }
+
+  .button {
+    display: block;
+    width: max-content;
+    padding: 1rem 3rem;
+    background: #4a1716;
+    color: #fff;
+    border-radius: 999px;
+    font-weight: 600;
+    font-size: 1.5rem;
+    white-space: nowrap;
+    text-decoration: none;
+    margin: 0 auto 20rem auto;
+  }
+
+  .button:hover {
+    background-color: #cec4c3;
+    color: #38171a;
   }
 
   @keyframes scroll {
