--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -78,9 +78,10 @@
     .grid_desktop {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 20px;
+      gap: 50px;
       padding-top: 3rem;
       padding-bottom: 3rem;
+      padding-left: 6rem;
       justify-content: center;
     }
 
