--- a/src/components/Statestisk.astro
+++ b/src/components/Statestisk.astro
@@ -73,7 +73,7 @@
   .sw-statistik_gitter {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 4rem;
+    gap: 2rem;
     justify-items: center;
     margin-bottom: 12rem;
   }
@@ -82,19 +82,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 4rem;
+    gap: 3rem;
   }
 
   .sw-statistik_procent {
-    font-size: 3rem;
+    font-size: 4rem;
     font-weight: 700;
   }
 
   .sw-statistik_tekst {
     font-size: 1.8rem;
-    font-style: bold;
+    font-weight: 600;
     line-height: 1.35;
-    max-width: 14rem;
+    max-width: 20rem;
   }
 
   .sw-statistik_kilde {
@@ -113,7 +113,7 @@
     opacity: 0.7;
   }
 
-  @media (max-width: 800px) {
+  @media (max-width: 1000px) {
     .sw-statistik_gitter {
       grid-template-columns: 1fr;
       gap: 3rem;
