--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,10 +19,21 @@ img {
   font-style: normal;
 }
 
+.inter {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 /*******************************************/
 
 h1,
 h2,
 h3 {
   font-family: "Montserrat", sans-serif;
+}
+
+p,
+a {
+  font-family: "Inter", sans-serif;
 }
