--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import "./styles/style.css";
 import AbonnementSektion from "./AbonnementSektion.astro";
 import Hero from "./Hero.astro";
+import Signup from "./Signup.astro";
 
 const url = "https://lrmrhubfcdexgbtzwhkl.supabase.co/rest/v1/Subscriptions";
 const key = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxybXJodWJmY2RleGdidHp3aGtsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMwNzcxMTcsImV4cCI6MjA3ODY1MzExN30.BNzYKZUOSXZL6ZaNW1b-yliRwEPQTcsV8Xbe0_D55AE";
@@ -29,6 +30,6 @@ console.log("supadata: ", supaData);
   <body>
     <h1>Astro</h1>
     <AbonnementSektion data={supaData} />
-    <Hero />
+    <Signup />
   </body>
 </html>
