--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,6 @@ import Header from "./Header.astro";
     <title>Astro</title>
   </head>
   <body>
-    <!-- <h1>Astro</h1> -->
-    <Header />
+    <h1>Astro</h1>
   </body>
 </html>
